# esp32-mcp-io-extender

./: .gitignore  CHANGELOG.md  README.md  agents.md  pyproject.toml
agents/: library.required.skills.md
agents/skills/: git-workflow-hygiene.skills.md  halo-bench-integration.skills.md  protocol-and-compatibility.skills.md  python-integration-api.skills.md  repo-orientation.skills.md  verification-and-safety.skills.md
codex/: config.linux.toml  config.macos.toml  config.toml
docs/: abstraction_mapping.md  agent_runbook.md  architecture_note.md  halo_bench_integration.md  serial_protocol.md  validation.md
firmware/: platformio.ini
firmware/src/: main.cpp
host/: __init__.py  esp_gpio_bridge.py  gpio_cli.py  mcp_gpio_server.py  requirements.txt
src/esp32_mcp_io_extender/: __init__.py  bridge.py  cli.py  mcp_server.py  uart_pty.py  workbench.py
tests/: test_bridge.py  test_cli.py  test_uart_pty.py  test_workbench.py
